# kick

./: .gitignore  CONFIGURATION.md  Cargo.toml  Kick.toml  README.md  WOBBLY_VERSIONS.md  action.yml  config.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  test.yml  weekly.yml
config/: actions.md  badges.md  package.md  toplevel.md  variables.md  versions.md  workflows.md
src/: action.rs  actions.rs  changes.rs  cli.rs  command_system.rs  commands.rs  config.rs  ctxt.rs  edits.rs  env.rs  file.rs  fs.rs  git.rs  git_cache.rs  github_action.rs  gitmodules.rs  glob.rs  keys.rs  main.rs  main.ts  manifest.rs  model.rs  module_sets.rs  musli.rs  octokit.rs  once.rs  packaging.rs  params.rs  process.rs  release.rs  repo_sets.rs  restore.rs  rust_version.rs  sets.rs  shell.rs  system.rs  template.rs  templates.rs  urls.rs  utils.rs  (+6 more)
src/cargo/: dependencies.rs  dependencies_table.rs  dependency.rs  dependency_item.rs  mod.rs  package_manifest.rs  rust_version.rs  workspace_table.rs
src/cli/: changes.rs  check.rs  compress.rs  define.rs  for.rs  foreach.rs  github_action.rs  github_publish.rs  github_release.rs  login.rs  mod.rs  msi.rs  msrv.rs  output.rs  publish.rs  rpm.rs  run.rs  set.rs  status.rs  sync.rs  update.rs  upgrade.rs  version.rs  with_repos.rs  workflows.rs
src/cli/check/: cargo.rs  ci.rs  mod.rs  readme.rs
src/cli/deb/: mod.rs
src/cli/gh/: mod.rs  release.rs  status.rs  workflows.rs
src/cli/msi/: mod.rs  version.rs
src/cli/rpm/: find_requires.rs  find_requires_by_elf.rs  mod.rs
src/commands/: action_config.rs  action_runners.rs  actions.rs  batch.rs  batch_config.rs  batch_options.rs  colors.rs  env.rs  mod.rs  prepare.rs  remediations.rs  run.rs  run_on.rs  schedule.rs  schedule_basic_command.rs  schedule_node_action.rs  schedule_outputs.rs  schedule_run.rs  schedule_static_setup.rs  schedule_use.rs  scheduler.rs  session_config.rs  workflow_loader.rs  workflows.rs
src/deb/: architecture.rs  builder.rs  mod.rs
src/gix/: mod.rs  progress.rs
src/glob/: tests.rs
src/manifest/: dependencies.rs  dependency.rs  manifest_dependencies.rs  manifest_dependency.rs  manifest_package.rs  manifest_workspace.rs  manifest_workspace_dependencies.rs  manifest_workspace_dependency.rs  package.rs  workspace.rs  workspace_dependencies.rs  workspace_dependency.rs
src/redact/: chunks.rs  mod.rs  tests.rs
src/release/: mod.rs  parser.rs
src/rstr/: chunks.rs  mod.rs  tests.rs
src/system/: dnf.rs  generic.rs  git.rs  mod.rs  node.rs  powershell.rs  wsl.rs
src/validation/: cargo.rs  ci.rs  readme.rs
src/wix/: builder.rs  mod.rs
src/workflows/: eval.rs  fns.rs  grammar.rs  lexer.rs  mod.rs  parsing.rs  tests.rs
