[package]
name = "kick"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.70"
description = "Give your projects a good 🦶!"
documentation = "https://docs.rs/kick"
readme = "README.md"
homepage = "https://github.com/udoprog/kick"
repository = "https://github.com/udoprog/kick"
license = "MIT OR Apache-2.0"
keywords = ["project"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.70"
bstr = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.2", features = ["derive"] }
flate2 = "1.0.25"
handlebars = "4.3.6"
nondestructive = { version = "0.0.17", features = ["serde-edits"] }
pulldown-cmark = "0.9.2"
regex = "1.7.3"
relative-path = { version = "1.8.0", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["json"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
toml = { version = "0.7.3", features = ["preserve_order"] }
toml_edit = "0.19.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
unicycle = "0.9.4"
url = { version = "2.3.1", features = ["serde"] }
