[package]
name = "kick"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.85"
description = "Give your projects a good 🦶!"
documentation = "https://docs.rs/kick"
readme = "README.md"
homepage = "https://github.com/udoprog/kick"
repository = "https://github.com/udoprog/kick"
license = "MIT OR Apache-2.0"
keywords = ["project"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.70"
ar = "0.9.0"
async-stream = "0.3.5"
base64 = "0.22.1"
bstr = "1.4.0"
bytes = "1.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.2", features = ["derive", "wrap_help"] }
ctrlc = "3.4.5"
directories = "6.0.0"
elf = "0.7.4"
flate2 = "1.0.25"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", default-features = false }
handlebars = "6.2.0"
md5 = "0.7.0"
musli = { version = "0.0.128", features = ["serde", "storage"] }
nondestructive = { version = "0.0.26", features = ["serde-edits"] }
pulldown-cmark = "0.13.0"
rand = "0.9.0"
regex = "1.7.3"
relative-path = { version = "1.8.0", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
rpm = "0.16.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
syntree = "0.18.0"
tar = "0.4.40"
tempfile = "3.5.0"
termcolor = "1.4.1"
thiserror = "2.0.9"
time = "0.3.30"
tokio = { version = "1.27.0", features = ["full"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
unicycle = "0.10.2"
url = { version = "2.3.1", features = ["serde"] }
xz2 = "0.1.7"
zip = "2.6.1"

[dependencies.gix]
version = "0.71.0"
features = [
    "blocking-http-transport-reqwest",
    "blocking-http-transport-reqwest-rust-tls-trust-dns",
    "blocking-http-transport-reqwest-native-tls",
    "worktree-mutation",
]
